# tn-file-upload

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  Taskfile.yml  build.rs
benches/: file_upload.rs
docs/rationale/: 0001_architecture.md  0002_rest_api_shim.md
proto/: file_upload.proto
scripts/: open-docs.sh  smoke-test.sh  version.sh
src/: auth.rs  config.rs  health.rs  interceptor.rs  lib.rs  rest.rs  service.rs
src/client/: main.rs
src/server/: main.rs
src/storage/: local.rs  mod.rs
tests/: integration.rs
web/: .gitignore  biome.json  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
web/src/: main.tsx  routeTree.gen.ts  styles.css
web/src/api/: client.test.ts  client.ts
web/src/pages/: Files.tsx  Upload.tsx
web/src/routes/: __root.tsx  files.tsx  index.tsx
