[package]
name = "tn-file-upload"
version = "0.1.0"
edition = "2024"
rust-version = "1.95.0"

[[bin]]
name = "file-upload-server"
path = "src/server/main.rs"

[[bin]]
name = "file-upload-client"
path = "src/client/main.rs"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
bytes = "1.11.1"
chrono = "0.4.44"
hex = "0.4.3"
prost = "0.14.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["full"] }
tokio-stream = "0.1.18"
tokio-util = "0.7.18"
tonic = "0.14.5"
tonic-health = "0.14.5"
tonic-prost = "0.14"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
uuid = { version = "1.23.1", features = ["v7"] }

[build-dependencies]
tonic-prost-build = "0.14.5"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["async_tokio"] }
tempfile = "3.27.0"

[[bench]]
name = "file_upload"
harness = false