[package]
name = "tn-file-upload"
version = "0.2.1"
edition = "2024"
rust-version = "1.95.0"

[[bin]]
name = "file-upload-server"
path = "src/server/main.rs"

[[bin]]
name = "file-upload-client"
path = "src/client/main.rs"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
axum = { version = "0.8.9", features = ["multipart"] }
bytes = "1.11.1"
chrono = "0.4.44"
hex = "0.4.3"
prost = "0.14.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
subtle = "2.6.1"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["full"] }
tokio-stream = "0.1.18"
tokio-util = { version = "0.7.18", features = ["rt"] }
tonic = "0.14.5"
tonic-health = "0.14.5"
tonic-prost = "0.14.5"
tonic-reflection = "0.14.5"
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
uuid = { version = "1.23.1", features = ["v7"] }

[build-dependencies]
tonic-prost-build = "0.14.5"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["async_tokio"] }
tempfile = "3.27.0"
tower = "0.5.3"

[[bench]]
name = "file_upload"
harness = false